# photorganyze

./: .gitignore  pyproject.toml  setup.py
config/: photorganyze.conf
photorganyze/: __init__.py  __main__.py  file.py  movie.py  photo.py
photorganyze/lib/: config.py  util.py
src/photorganyze/: __init__.py  __main__.py  file.py  movie.py  photo.py
src/photorganyze/lib/: config.py  photorganyze.conf  util.py
